Fixed exception handling (async), Added a feature to take playtime from Nova 4 and 5 into account for total playtime, added a config to toggle features at runtime. Also added the framework for LevenshteinDistance-based nickname lookups, not working currently.